public_html/css/videoPlayer.css
@charset "UTF-8";

body { background-color: #222; margin: 20px; }

.clear_both { clear: both; line-height: 1px; }

.video_gallery_container {
	padding: 25px 0px 25px 115px;
	border: 1px solid #444;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	background: #000 url(http://swarmtv.net/img/filmstrip_tile.png) repeat-y 0px 0px;
}

a.videoLink { 
	display: block;
	margin: 0px 15px 15px 0px;
	width: 200px;
	height: 115px;
	float: left;
	position: relative;
	cursor: pointer;
	background: #555 no-repeat 0px 0px;
	border: 1px solid #000;
}

a.videoLink:hover { border-color: #fff; }

a.videoLink img.play { position: absolute; top: 25px; left: 75px; }
a.videoLink div.caption {
	position: absolute; width: 180px; bottom: 0px; padding: 10px; color: #fff; background-color: rgba(0,0,0,.5);
	font-family: Arial; font-size: 12px; text-align:center;
}

a.sequenceLink {font-family: Arial; font-size: 15px;}

